# fast_combine

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yaml
src/: lib.rs
