[build-system]
requires      = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name    = "fast_combine"
version = "0.1.2"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
