[build-system]
requires      = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name    = "fast_combine"
version = "0.1.4"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [
  { name="atrivisc", email="atrivisc.shawl130@passmail.com" },
]
description = "A simple pyo3 rust library to recursively merge 2 dicts fast"
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
"Homepage" = "https://github.com/atrivisc/fast_combine"
"Repository" = "https://github.com/atrivisc/fast_combine.git"
"Bug Tracker" = "https://github.com/atrivisc/fast_combine/issues"
